@@ -27,13 +27,6 @@ struct Picmlin_Options
   /// Default constructor.
   Picmlin_Options (void);
 
-  /**
-   * Insert a new parameter into the list.
-   *
-   * @param[in]     param      The name=value pair.
-   */
-  int insert_param (char * param);
-
   /// Verbose flag.
   bool verbose_;
 
@@ -46,15 +39,9 @@ struct Picmlin_Options
   /// The input file name of the Scatter model.
   std::string scatter_input_;
 
-  /// Run the following component.
-  std::string run_component_;
-
   char instance_name_separator_;
 
-  /// Listing of parameters for the component.
-  typedef std::list <std::pair <std::string, std::string> > Parameter_List;
-
-  Parameter_List params_;
+  std::string deployment_output_;
 };
 
 #endif  // !defined _PICMLIN_OPTIONS_H_
